--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,16 @@
 			<artifactId>spring-web</artifactId>
 			<version>5.3.23</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-registry-prometheus</artifactId>
+			<version>1.10.2</version>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
