--- a/database/Dockerfile
+++ b/database/Dockerfile
@@ -2,4 +2,4 @@ FROM postgres:14.2-alpine
 ENV POSTGRES_PASSWORD postgres
 ENV POSTGRES_USER postgres
 ENV POSTGRES_DB postdb
-COPY *.sql /docker-entrypoint-initdb.d/
+COPY init.sql /docker-entrypoint-initdb.d/
